--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -425,12 +425,16 @@
       <SubType>Designer</SubType>
     </Xml>
     <Xml Include="Benedict05.xml" />
-    <Xml Include="Benedict05A.xml" />
+    <Xml Include="Benedict05A.xml">
+      <SubType>Designer</SubType>
+    </Xml>
     <Xml Include="Benedict06.xml" />
     <Xml Include="Benedict07.xml">
       <SubType>Designer</SubType>
     </Xml>
-    <Xml Include="Benedict08.xml" />
+    <Xml Include="Benedict08.xml">
+      <SubType>Designer</SubType>
+    </Xml>
     <Xml Include="CommonwealthShips.xml" />
     <Xml Include="CompatibilityLibrary.xml" />
     <Xml Include="CoreFireEffects.xml">
