--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -428,7 +428,9 @@
     <Xml Include="Benedict05A.xml">
       <SubType>Designer</SubType>
     </Xml>
-    <Xml Include="Benedict06.xml" />
+    <Xml Include="Benedict06.xml">
+      <SubType>Designer</SubType>
+    </Xml>
     <Xml Include="Benedict07.xml">
       <SubType>Designer</SubType>
     </Xml>
