Reverted mining laser
Until we can fix some balance issues with continuousBeam

--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -346,7 +346,9 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="HUD.xml" />
-    <None Include="RPGAnalyzers.xml" />
+    <None Include="RPGAnalyzers.xml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="RPGAutons.xml">
       <SubType>Designer</SubType>
     </None>
