Bindings for numpad and mouse

--- a/Transcendence/Transcendence.vcxproj
+++ b/Transcendence/Transcendence.vcxproj
@@ -715,6 +715,7 @@
     <ClInclude Include="GameSession.h" />
     <ClInclude Include="GameSettings.h" />
     <ClInclude Include="IntroSession.h" />
+    <ClInclude Include="KeyboardMapData.h" />
     <ClInclude Include="PreComp.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Sessions.h" />
