--- a/TransCore/TransCore.vcxproj
+++ b/TransCore/TransCore.vcxproj
@@ -497,7 +497,9 @@
     <Xml Include="Stormhound.xml">
       <SubType>Designer</SubType>
     </Xml>
-    <Xml Include="Volkov.xml" />
+    <Xml Include="Volkov.xml">
+      <SubType>Designer</SubType>
+    </Xml>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
