--- a/TransCore/TransCore.vcxproj.filters
+++ b/TransCore/TransCore.vcxproj.filters
@@ -513,5 +513,8 @@
     <Xml Include="RPGCommoditiesExchange.xml">
       <Filter>RPG Library</Filter>
     </Xml>
+    <Xml Include="RPGMembership.xml">
+      <Filter>RPG Library</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
