Move unit test eval to core code

--- a/TransData/TransData.vcxproj
+++ b/TransData/TransData.vcxproj
@@ -472,6 +472,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\Game\TLisp\LanguageUnitTest.tlisp" />
     <None Include="..\Game\TLisp\ListUnitTest.tlisp" />
     <None Include="..\Game\TransData.xml">
       <SubType>Designer</SubType>
